# diive

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_REVIEW_TimestampSanitizer.md  CONTRIBUTING.md  LICENSE  OVERVIEW.md  README.md  _pyproject.toml  check_syntax.py  pyproject.toml  pyproject.toml~  test_import.py
.github/workflows/: docs.yml
diive/: __init__.py  logger.py  main.py
diive - Copy/: logger.py
diive - Copy/core/: __init__.py
diive/analysis/: __init__.py  compoundextremes.py  correlation.py  decoupling.py  gapfinder.py  granger.py  gridaggregator.py  harmonic.py  histogram.py  optimumrange.py  profile.py  quantiles.py  seasonaltrend.py
diive/common/: __init__.py
diive/core/: __init__.py
diive/corrections/: __init__.py
diive/events/: __init__.py  event.py
diive/features/: __init__.py
diive/fits/: __init__.py  fitter.py
diive/flux/: __init__.py
diive/gapfilling/: __init__.py  codegen.py  interpolate.py  longterm.py  mds.py  randomforest_ts.py  similarity.py  swin.py  xgboost_ts.py
diive/gui/: MANUAL.md  README.md  __init__.py  _cli.py  app.py  build_manual.py  config.py  db.py  events.py  icons.py  metadata_store.py  registry.py  site.py  splash.py  theme.py
diive/io/: __init__.py
diive/outliers/: __init__.py
diive/pkgs/: __init__.py
diive/plotting/: __init__.py
diive/preprocessing/: __init__.py
diive/qaqc/: __init__.py
diive/times/: __init__.py
diive/variables/: __init__.py  classification.py  radiation.py  temporal.py  thermodynamic.py  utilities.py
docs/: GITHUB_PAGES_SETUP.md  README.md  api_reference.rst  build_html.py  conf.py  contributing.rst  diive.common.dfun.rst  diive.common.filereader.rst  diive.common.plots.rst  diive.common.plots.styles.rst  diive.common.rst  diive.common.utils.rst  diive.pkgs.analyses.rst  diive.pkgs.flux.carboncost.rst  diive.pkgs.flux.rst  diive.pkgs.rst  diive.rst  faq.rst  getting_started.rst  index.rst  installation.rst  requirements.txt  sg_execution_times.rst
docs/_autosummary/: diive.core.dfun.frames.rst  diive.core.ml.optimization.rst  diive.core.plotting.rst  diive.pkgs.analyses.correlation.rst  diive.pkgs.analyses.decoupling.rst  diive.pkgs.createvar.laggedvariants.rst  diive.pkgs.gapfilling.randomforest_ts.rst  diive.pkgs.gapfilling.xgboost_ts.rst  diive.pkgs.outlierdetection.absolutelimits.rst  diive.pkgs.outlierdetection.hampel.rst  diive.pkgs.outlierdetection.localsd.rst  diive.pkgs.outlierdetection.lof.rst  diive.pkgs.outlierdetection.stepwiseoutlierdetection.rst  diive.pkgs.outlierdetection.zscore.rst
docs/_static/: custom.css
docs/auto_examples/: index.rst  run_all_examples.codeobj.json  run_all_examples.ipynb  run_all_examples.py  sg_execution_times.rst
docs/source/: _config.yml  _toc.yml  changelog.md  conf.py  diive.core.base.rst  diive.core.dfun.rst  diive.core.funcs.rst  diive.core.io.rst  diive.core.ml.rst  diive.core.plotting.rst  diive.core.plotting.styles.rst  diive.core.rst  diive.core.times.rst  diive.core.utils.rst  diive.pkgs.analyses.rst  diive.pkgs.binary.rst  diive.pkgs.corrections.rst  diive.pkgs.createvar.rst  diive.pkgs.echires.rst  diive.pkgs.fits.rst  diive.pkgs.flux.rst  diive.pkgs.fluxprocessingchain.rst  diive.pkgs.formats.rst  diive.pkgs.gapfilling.rst  diive.pkgs.outlierdetection.rst  diive.pkgs.qaqc.rst  diive.pkgs.rst  diive.rst  faq.md  index.rst  intro.md  modules.rst
examples/: CATALOG.md  COOKBOOK.md  EXAMPLE_DATASET.md  README.md  run_all_examples.py
examples/analyses/: README.md  correlation.py  gapfinder.py  optimumrange.py  seasonaltrend.py
examples/analysis/: README.md  analysis_compound_extremes.py  analysis_daily_correlation.py  analysis_decoupling.py  analysis_driveranalysis.py  analysis_gapfinder.py  analysis_gapstats.py  analysis_granger.py  analysis_gridaggregator.py  analysis_harmonic.py  analysis_histogram_distribution.py  analysis_keep_records_where.py  analysis_optimumrange.py  analysis_quantiles.py  analysis_seasonaltrend.py
examples/binary/: README.md  extract.py
examples/corrections/: README.md  offsetcorrection.py
examples/createvar/: README.md  air.py  conversions.py  laggedvariants.py  timesince.py
examples/echires/: README.md  fluxdetectionlimit.py  lag.py
examples/events/: README.md  events_event.py
examples/features/: README.md  feature_air.py  feature_daynightflag.py  feature_engineer.py  feature_evapotranspiration.py  feature_laggedvariants.py  feature_latent_heat.py  feature_noise.py  feature_potentialradiation.py  feature_sonic_temp_conversion.py  feature_timesince.py  feature_vpd.py
examples/fits/: README.md  fit_binfittercp.py  fit_fitter.py
examples/flux/: README.md  hqflux.py  selfheating.py  uncertainty.py
examples/gap_filling/: README.md  comparison.py  mds.py  mds_comparison.py  (+2 more)
notebooks/: FormatMeteoForEddyProFluxProcessing.ipynb  OVERVIEW.ipynb  QuickRandomForestGapFilling.ipynb  README.md  RandomForestGapFilling.ipynb  StepwiseMeteoScreeningFromDatabase.ipynb  StepwiseMeteoScreeningFromDatabase_apply.ipynb  Untitled.ipynb
packaging/: README.md  build_gui.ps1  diive_gui.spec  launch_diive_gui.py  make_icon.py
scratch/: benchmark_ustar_optimization.py  create_parquet_subset_from_eddypro_fluxnetfile.py  parquet_timerange_subset_ch-cha.py  parquet_timerange_subset_ch-lae.py
scripts/: download_influxdb_data.py
source/: conf.py
tests/: loadtestdata.py  test_analyses.py  test_corrections.py  test_createvar.py  test_docstrings.py  test_driveranalysis.py  test_echires.py  test_events.py  test_fits.py  test_flux_codegen.py  test_fluxprocessingchain.py  test_formats.py  test_frames.py  test_gapfilling.py  test_gridaggregator.py  test_gui.py  test_heatmap_xyz.py  test_hexbin_plot.py  test_imports.py  test_influxdb.py  test_loaddata.py  test_metadata.py  test_outlierdetection.py  test_partitioning.py  test_partitioning_daytime_oneflux.py  test_partitioning_daytime_reddyproc.py  test_partitioning_reddyproc.py  test_plots.py  test_project.py  test_qaqc.py  test_resampling.py  test_time.py  test_timestamps.py  test_uncertainty.py  test_ustar_mp.py
(+1507 files in other folders)
