[tool.poetry]
name = "diive"
version = "0.91.0"
description = "Time series processing"
authors = ["Lukas Hörtnagl <holukas@ethz.ch>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = ">=2.2.3,<3.0.0"
xgboost = ">=3.0.0,<4.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
matplotlib = "3.10.7"
pyyaml = ">=6.0.2,<7.0.0"
uncertainties = ">=3.2.2,<4.0.0"
statsmodels = ">=0.14.4,<0.15.0"
prophet = ">=1.1.6,<2.0.0"
seaborn = ">=0.13.2,<0.14.0"
bokeh = ">=3.7.1,<4.0.0"
pyarrow = ">=19.0.1,<20.0.0"
pymannkendall = ">=1.4.3,<2.0.0"
yellowbrick = ">=1.5,<2.0"
eli5 = ">=0.14.0,<0.15.0"
dtreeviz = ">=2.2.2,<3.0.0"
numpy = ">=2.2.4,<3.0.0"
sktime = ">=0.36.0,<0.37.0"
category-encoders = ">=2.8.1,<3.0.0"
scikit-optimize = ">=0.10.2,<0.11.0"
polars = ">=1.26.0,<2.0.0"
jupyterlab = ">=4.3.6,<5.0.0"
jupyter-bokeh = ">=4.0.5,<5.0.0"
shap = ">=0.48.0,<0.49.0"
shapiq = ">=1.3.1,<2.0.0"

[tool.poetry.group.dev.dependencies]
dbc-influxdb = { path = "../../22 - POET/dbc-influxdb", develop = true }
ipywidgets = ">=8.1.5"
ruff = ">=0.11.2"
autopep8 = ">=2.3.2"
ghp-import = ">=2.1.0"
jupyter-book = ">=1.0.4.post1"
ty = "^0.0.12"
pytest = ">=8.0.0"
sphinx = ">=7.0"
sphinx-book-theme = ">=1.1.0"
myst-parser = ">=2.0"
sphinx-autodoc-typehints = ">=1.24"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"