[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diive"
version = "0.91.0"
description = "Time series processing"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "GPL-3.0" }
authors = [{ name = "Lukas Hörtnagl", email = "holukas@ethz.ch" }]

dependencies = [
    "pandas>=3.0.0,<4.0.0",
    "xgboost>=3.0.0,<4.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "matplotlib==3.10.7",
    "pyyaml>=6.0.2,<7.0.0",
    "uncertainties>=3.2.2,<4.0.0",
    "statsmodels>=0.14.4,<0.15.0",
    "prophet>=1.1.6,<2.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "bokeh>=3.7.1,<4.0.0",
    "pyarrow>=19.0.1,<20.0.0",
    "pymannkendall>=1.4.3,<2.0.0",
    "yellowbrick>=1.5,<2.0",
    "eli5>=0.14.0,<0.15.0",
    "dtreeviz>=2.2.2,<3.0.0",
    "numpy>=2.2.4,<3.0.0",
    "category-encoders>=2.8.1,<3.0.0",
    "scikit-optimize>=0.10.2,<0.11.0",
    "polars>=1.26.0,<2.0.0",
    "jupyterlab>=4.3.6,<5.0.0",
    "jupyter-bokeh>=4.0.5,<5.0.0",
    "shap>=0.48.0,<0.49.0",
    "pandas-stubs>=2.0.0,<3.0.0",
    "dbc-influxdb @ file:///F:/Sync/luhk_work/20%20-%20CODING/22%20-%20POET/dbc-influxdb",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.2",
    "autopep8>=2.3.2",
    "ipywidgets>=8.1.5",
    "ghp-import>=2.1.0",
    "jupyter-book>=1.0.4.post1",
]

docs = [
    "sphinx>=9.1.0",
    "furo>=2024.1.29",
    "myst-parser>=5.0.0",
    "sphinx-autodoc-typehints>=3.10.2",
    "sphinx-gallery>=0.21.0",
]

all = [
    "diive[dev,docs]",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
python-preference = "managed"

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.10.2",
    "sphinx-basic-ng>=1.0.0b2",
    "sphinx-gallery>=0.21.0",
]
