[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diive"
version = "0.91.0"
description = "Time series processing"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "GPL-3.0" }
authors = [{ name = "Lukas Hörtnagl", email = "holukas@ethz.ch" }]

dependencies = [
    "pandas>=3.0.0,<4.0.0",
    "xgboost>=3.0.0,<4.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "matplotlib>=3.10.0,<4.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "uncertainties>=3.2.2,<4.0.0",
    "statsmodels>=0.14.4,<0.15.0",
    "prophet>=1.1.6,<2.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "bokeh>=3.7.1,<4.0.0",
    "pyarrow>=19.0.1,<20.0.0",
    "pymannkendall>=1.4.3,<2.0.0",
    "yellowbrick>=1.5,<2.0",
    "eli5>=0.14.0,<0.15.0",
    "dtreeviz>=2.2.2,<3.0.0",
    "numpy>=2.2.4,<3.0.0",
    "category-encoders>=2.8.1,<3.0.0",
    "scikit-optimize>=0.10.2,<0.11.0",
    "polars>=1.26.0,<2.0.0",
    "jupyter-bokeh>=4.0.5,<5.0.0",
    "shap>=0.48.0,<1.0.0",
    "rich>=15.0.0",
    "textual>=8.2.7",
]

[project.optional-dependencies]
# Heavy causal-discovery libraries used only by DriverAnalysis Layer 3
# (DriverAnalysis.pcmci / .cate). They are lazy-imported, so the core install
# never needs them. Install with: pip install 'diive[causal]'  (or, with uv:
# uv sync --extra causal). tigramite -> PCMCI(+); econml -> CATE.
causal = [
    "tigramite>=5.2",
    "econml>=0.15",
]
# PySide6 (Qt) desktop GUI. Optional so headless/library users never pull in
# Qt. Install with: pip install 'diive[gui]'  (or: uv sync --extra gui).
gui = [
    "pyside6>=6.8,<7.0",
]

[project.scripts]
diive-tlag-pwb-batch = "diive.flux.hires.lag_pwb:_cli_main"
diive-tlag-apply-batch = "diive.flux.hires.apply_tlag:_cli_main"
diive-tlag-pwb-detect-remove = "diive.flux.hires.detect_and_remove_tlag:_cli_main"
diive-tlag-pwb-detect-remove-tui = "diive.flux.hires.detect_and_remove_tlag_tui:_tui_main"
diive-gui = "diive.gui._cli:_gui_main"

[tool.uv]
python-preference = "managed"

# Local editable source for dbc-influxdb. Only consulted when the opt-in 'db'
# group below is synced (uv sync --group db), so contributors who run the
# default `uv sync` never need the ../poet checkout. dbc-influxdb is also on
# PyPI (https://pypi.org/project/dbc-influxdb/) for anyone who wants it without
# the local checkout.
[tool.uv.sources]
dbc-influxdb = { path = "../poet/dbc-influxdb", editable = true }

[dependency-groups]
# dbc-influxdb is a personal dev dependency (local InfluxDB workflow) and is NOT
# part of the default sync — other contributors use their own database setup.
# Opt in with: uv sync --group db
db = ["dbc-influxdb"]
dev = [
    "jupyterlab>=4.3.6,<5.0.0",
    "ipykernel>=7.2.0",
    "pandas-stubs>=2.0.0,<3.0.0",
    "pytest>=8.0.0",
    "ruff>=0.11.2",
    "autopep8>=2.3.2",
    "ipywidgets>=8.1.5",
    "ghp-import>=2.1.0",
    "jupyter-book>=1.0.4.post1",
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.10.2",
    "sphinx-basic-ng>=1.0.0b2",
    "sphinx-gallery>=0.21.0",
]
# Standalone-app packaging for the desktop GUI (one-folder Windows build).
# Opt in with: uv sync --extra gui --group build, then: .\packaging\build_gui.ps1
build = [
    "pyinstaller>=6.10",
]

[tool.ruff]
cache-dir = ".ruff_cache"
